syntax = "proto3";


package user;

option go_package = "user-service/gen/user";

service AuthService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest{
  string token = 1;
}
message ValidateTokenResponse {
  uint32 user_id=1;
  bool valid=2;
}
